nested list ,images,docs added

--- a/list_types.html
+++ b/list_types.html
@@ -69,4 +69,39 @@
 
 </ul>
 
+<!--Defination list-->
+<dl>
+<dt>HTML</dt>
+<dd>HTML stands for Hyper Text Markup Language use to create Web page Structure</dd>
+
+<dt>CSS</dt>
+<DD>CSS stands for cascading Style Sheet</DD>
+
+</dl>
+
+<!--Nested List-->
+<ol>
+    <li>Mumbai Indians</li>
+    <ul>
+        <li>Rohit Sharma</li>
+        <li>Hardik Pandya</li>
+        <li>Arjun Tendulkar</li>
+    </ul>
+
+    <li>RCB</li>
+    <ul>
+        <li>Virat Kohli</li>
+        <li>Swapnil Singh</li>
+        <li>Yash Dayal</li>
+    </ul>
+
+    <li>KKR</li>
+    <ul>
+        <li>Sunil Narine</li>
+        <li>Ankul Roy</li>
+        <li>Rinku Singh</li>
+    </ul>
+</ol>
+
+
 </body>
