iframe ,img_audio_video and Input types.html

--- a/Table.HTMl
+++ b/Table.HTMl
@@ -78,5 +78,33 @@
 </table>
 
 
+
+
+<h1 style="color: brown;">Table exmaple 3 </h1>
+
+<table border="13">
+    <thead style="color: rgb(205, 0, 17);">
+        <tr>
+            <th colspan="4">JAVA</th>
+            <th colspan="4">PYTHON</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+        <td>batch 1</td>
+        <td>batch 2</td>
+        <td>batch 3</td>
+        <td>batch 4</td>
+
+        <td>batch 1</td>
+        <td>batch 2</td>
+        <td>batch 3</td>
+        <tD>batch 4</tD>
+
+        </tr>
+    </tbody>
+
+</table>
+
 </body>
 </html>
