input_types,marquee_tags,Semantics_tags

--- a/input_types.html
+++ b/input_types.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <fieldset>
         <legend>
@@ -13,36 +15,77 @@
 
         <form>
             <label>First Name</label>
-            <input type="text" placeholder="Enter your First Name"/> <br><br>
+            <input type="text" placeholder="Enter your First Name" /> <br><br>
 
             <label>Last Name</label>
-            <input type="text" placeholder="Enter your Last Name"/>  <br><br>
+            <input type="text" placeholder="Enter your Last Name" /> <br><br>
 
             <label>Phone Number</label>
-            <input type="number"/>  <br><br>
+            <input type="number" /> <br><br>
 
             <label>Email</label>
-            <input type="email"/>  <br><br>
+            <input type="email" /> <br><br>
 
             <label>Password</label>
-            <input type="password"/>  <br><br>
+            <input type="password" /> <br><br>
 
 
             <label>DOB</label>
-            <input type="date"/>  <br><br>
+            <input type="date" /> <br><br>
 
             <label>Month</label>
-            <input type="month"/>  <br><br>
+            <input type="month" /> <br><br>
 
             <label>Week</label>
-            <input type="week"/>  <br><br>
+            <input type="week" /> <br><br>
 
             <label>Time</label>
-            <input type="time"/>  <br><br>
-    
-            <input type="datetime-local"/>  <br><br>
+            <input type="time" /> <br><br>
 
-        </form>
+            <input type="datetime-local" /> <br><br>
+
+            <Label>Select City</Label> <br>
+            <input type="checkbox" checked/>Mumbai 
+            <input type="checkbox" />Pune
+            <input type="checkbox" />Nagpur
+            <input type="checkbox" />solapur
+
+
+
+            <Label>Select Gender</Label> <br>
+            <input type="radio" name="Gender"/>Male 
+            <input type="radio"name="Gender"/>Fe-Male
+            <input type="radio" name="Gender"/>other
+
+
+            <label>Select Favourite Dish</label> <br>
+            <select>
+            <option>--Choose Option---</option>
+            <option>Boundi Ladu</option>
+            <option>Rasgulla</option>
+            <option>Gulabjamun</option>
+            <option>Basundi</option>
+            </select>
+
+            <label>Upload image</label> <br>
+            <input type="file" multiple />
+            <input type="file"/> <br><br>
+
+            <label>Choose Color </label> <br>
+            <input type="color"><br><br>
+
+            <label>Choose range </label> <br>
+            <input type="range"> <br><br>
+
+            <label>Comments </label> <br>
+            <textarea rows="5" cols="5" ></textarea> <br><br>
+
+            <input type="submit">
+
+
+
+
     </fieldset>
 </body>
+
 </html>
